# vMF-cpp

./: CMakeLists.txt  License  test-vMF.cpp
include/vMF/: beta_distribution.h  vMF.h  vMF_constexpr.h  vector_operation.h
